# vp9-rs

./: Cargo.toml  Makefile.toml  build.rs  vpx.h
examples/: read_video.rs  shader.wgsl
src/: decoder.rs  ffi.rs  ivf.rs  lib.rs
